# Simulacra

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.allinone  Dockerfile.allinone.dockerignore  README.md  alembic.ini  docker-compose.coolify.yml  docker-compose.yml  pyproject.toml
.github/workflows/: calibration.yml  ci.yml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py
docker/: entrypoint.sh
docs/: backend.md  postgres-migration-plan.md
frontend/: .dockerignore  .env.local.example  .gitignore  Dockerfile  README.md  next.config.ts  package-lock.json  package.json  playwright.config.ts  vitest.config.ts
frontend/e2e/: _helpers.ts  auth-flow-01.spec.ts  benchmark-dataset.spec.ts  builder.spec.ts  bundle-simulator.spec.ts  calibration-dashboard.spec.ts  calibration-overlay.spec.ts  compare.spec.ts  dashboard.spec.ts  embed-widget.spec.ts  help-synthetic-mode.spec.ts  lighthouse-knobs.spec.ts  lighthouse-scenario.spec.ts  live-chrome-slot-tick.spec.ts  phase4-overview-fetch.spec.ts  raw-spec-editor.spec.ts  registry.spec.ts  replay-page.spec.ts  reports.spec.ts  results-replay-metrics.spec.ts  results.spec.ts  runner.spec.ts  schema-preview.spec.ts  share-link.spec.ts  smoke.spec.ts  sweeps.spec.ts  (+8 more)
scripts/: agent-loop.sh  capture_goldens.py  check_determinism.py  dev.sh  purge-local.sh  purge.sh  test-all.sh
tests/: conftest.py  test_paths.py  test_review_regressions.py
tools/: cache_corpus_slot.py  cache_jito_bundles.py  check_solana_rpc_capabilities.py  fill_whirlpool_manifest.py  fit_jito_tip_curve.py  snapshot_whirlpool_pool.py
(+598 files in other folders)
